--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Authority": "https://YOUR_AUTH_PROVIDER/",
+    "Audience": "YOUR_API_IDENTIFIER"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=webapi;User Id=sa;Password=MyStrongP@ssword1;Encrypt=False;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
