--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
     "Audience": "YOUR_API_IDENTIFIER"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=webapi;User Id=sa;Password=MyStrongP@ssword1;Encrypt=False;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost;Database=webapi;User Id=sa;Password=YourStrong!Passw0rd;Encrypt=False;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
