--- a/RestApiScratch.csproj
+++ b/RestApiScratch.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Folder1\" />
+  </ItemGroup>
+
 </Project>
