--- a/appsettings.json
+++ b/appsettings.json
@@ -5,9 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Jwt": {
-    "Authority": "https://YOUR_AUTH_PROVIDER/",
-    "Audience": "YOUR_API_IDENTIFIER"
+  "JwtSettings": {
+    "Issuer": "localhost",
+    "Audience": "localhost",
+    "SecretKey": "averylongsecretkeythatisrequiredtobeused"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=webapi;User Id=sa;Password=YourStrong!Passw0rd;Encrypt=False;TrustServerCertificate=True"
